--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,15 @@
   --accent-color: #2196f3;
 }
 
+h1,
+h2,
+h3,
+p,
+ul {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 ul {
   list-style: none;
 }
@@ -23,6 +32,13 @@ body {
   background-color: #fff;
   color: var(--primary-text-color);
   font-family: Roboto;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  outline: 2px solid tomato;
 }
 
 /* лого сайта */
@@ -87,6 +103,7 @@ body {
 /* герой */
 .hero {
   background-color: #2f303a;
+  text-align: center;
 }
 .hero-title {
   color: #ffff;
@@ -94,9 +111,9 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-bottom: 30px;
 }
 .hero-button {
   cursor: pointer;
@@ -105,11 +122,8 @@ body {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.9;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
-  background: #2196f3;
+  background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
@@ -154,6 +168,7 @@ body {
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 .team-member {
   color: var(--title-text-color);
