--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,10 @@ body {
   background-color: #2f303a;
   text-align: center;
   margin-bottom: 94px;
+  width: 1600;
+  height: 600;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   color: #ffff;
@@ -165,11 +169,14 @@ body {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 /* команда */
 .team {
   background-color: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .team-title {
   color: var(--title-text-color);
@@ -199,6 +206,8 @@ body {
 /* подвал */
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .logofooter-begin {
   color: var(--accent-color);
@@ -208,6 +217,7 @@ body {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 .logofooter-end {
   color: #fff;
@@ -217,6 +227,7 @@ body {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
 }
 .logofooter-end:hover,
 .logofooter-end:focus {
@@ -248,6 +259,16 @@ body {
 }
 
 /* портфолио */
+.portfolio {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
+.filter {
+  margin-top: 0px;
+  margin-bottom: 34px;
+}
+
 .filter-btn {
   cursor: pointer;
   color: var(--title-text-color);
