--- a/css/style.css
+++ b/css/style.css
@@ -31,19 +31,25 @@ ul {
   padding: 0px;
 }
 
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
+
 .list {
   padding: 0px;
   margin: 0px;
   text-decoration: none;
 }
 
-a {
-  text-decoration: none;
-}
-
 .section {
-  padding-top: 47px;
-  padding-bottom: 47px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .container {
@@ -167,7 +173,6 @@ a {
 .hero {
   background-color: #2f303a;
   text-align: center;
-  margin-bottom: 94px;
   width: 1600;
   height: 600;
   padding-top: 200px;
@@ -281,6 +286,7 @@ display: flex;
   margin-bottom: 30px;
 }
 .team-title {
+  margin-bottom: 50px;
   color: var(--title-text-color);
   font-style: normal;
   font-weight: bold;
@@ -307,6 +313,8 @@ display: flex;
 
 /* подвал */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
@@ -368,14 +376,18 @@ display: flex;
 }
 
 /* портфолио */
-/* .filter {
-  margin-top: 0px;
-  margin-bottom: 50px;
-} */
+.filter {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 
 .filter-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 34px;
 }
 
 .filter-list .item +.item {
@@ -402,7 +414,13 @@ margin-left: 8px;
 }
 
 /* предложения */
-
+.proposal {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 .proposal-list {
   display: flex;
   flex-wrap: wrap;
@@ -414,14 +432,15 @@ margin-left: 8px;
   width: 370px;
 } 
 
+.proposal-list .item:nth-last-child(-n+3) {
+  margin-bottom: 0px;
+}
+
 .proposal-list .item:nth-child(3n+3) {
   margin-right: 0px;
 }
 .proposal-title {
-  margin-top: 20px;
-  margin-right: 24px;
-  margin-bottom: 4px;
-  margin-left: 24px;
+  padding: 20px, 24px;
   color: var(--title-text-color);
   font-style: normal;
   font-weight: bold;
@@ -430,9 +449,7 @@ margin-left: 8px;
   letter-spacing: 0.06em;
 }
 .proposal-text {
-  margin-bottom: 20px;
-  margin-right: 24px;
-  margin-left: 24px;
+  padding: 20px, 24px;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
