--- a/css/style.css
+++ b/css/style.css
@@ -462,7 +462,7 @@ display: flex;
 }
 
 .card-title {
-  padding: 20px 18px;
+  padding: 20px 0px 20px 24px;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
