--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ img {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 2px solid tomato;
   
 }
 
@@ -261,11 +262,11 @@ border-bottom: 1px solid #ececec;
 display: flex;
 }
 
-.work-list .item {
+.work-item {
   margin-right: 30px;
 }
 
-.work-list .item:nth-child(3n) {
+.work-item:nth-child(3n) {
   margin-right: 0px;
 }
 
@@ -279,15 +280,15 @@ display: flex;
   display: flex;
 }
 
-.team-list .item {
+.team-item {
   margin-right: 30px;
 }
 
-.team-list .item:nth-child(4n) {
+.team-item:nth-child(4n) {
   margin-right: 0px;
 }
 
-.team-list .item {
+.team-item {
   text-align: center;
 }
 .team-member {
@@ -451,21 +452,29 @@ display: flex;
   flex-wrap: wrap;
 }
 
-.proposal-list .item {
+.proposal-item {
   margin-right: 30px;
   margin-bottom: 30px;
-  width: 370px;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
 } 
 
-.proposal-list .item:nth-child(3n+3) {
-  margin-right: 0px;
+.proposal-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.proposal-item:last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+.proposal-link {
+  display: block;
 }
 
 .card-title {
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
+  border-top: 0;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 .proposal-title {
   color: var(--title-text-color);
@@ -474,6 +483,7 @@ display: flex;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  margin-bottom: 4px;
 }
 .proposal-text {
   font-style: normal;
