--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,6 @@ img {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
-  
 }
 
 /* шапка */
@@ -470,6 +468,7 @@ display: flex;
 }
 
 .card-title {
+  width: 370px;
   padding: 20px 24px;
   border-top: 0;
   border-right: 1px solid #eeeeee;
