--- a/css/style.css
+++ b/css/style.css
@@ -467,14 +467,12 @@ display: flex;
   display: block;
 }
 
-.card-title {
-  width: 370px;
-  padding: 20px 24px;
-  border-top: 0;
-  border-right: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-left: 1px solid #eeeeee;
-}
+.card-title{
+  Padding: 24px 0 20px 24px;
+  Border-top: 0;
+  Border: 1px solid #eeeeee
+  }
+  
 .proposal-title {
   color: var(--title-text-color);
   font-style: normal;
